# ovl

./: .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.bash
.github/workflows/: llvm-mingw.yml
cmake/: llvm-mingw.cmake
include/ovl/: crypto.h  dialog.h  file.h  os.h  path.h  source.h  time.h
include/ovl/audio/: decoder.h  info.h  tag.h
include/ovl/audio/decoder/: bidi.h  flac.h  mp3.h  ogg.h  opus.h  wav.h
include/ovl/source/: file.h  memory.h
src/: CMakeLists.txt  file.c  file_test.c  i18n.h  path.c  path_test.c  test_util.c  test_util.h
src/audio/: tag.c  tag.h
src/audio/decoder/: bidi.c  bidi_test.c  flac.c  flac_test.c  mp3.c  mp3_test.c  ogg.c  ogg_test.c  opus.c  opus_test.c  wav.c  wav_inline.h  wav_test.c
src/audio/tag/: id3v2.c  id3v2.h  id3v2_test.c  vorbis_comment.c  vorbis_comment.h
src/crypto/: random.c  random_test.c  sign.c  sign_test.c
src/dialog/: save_file.c  select_file.c  select_folder.c
src/file/: close.c  create.c  create_temp.c  create_unique.c  open.c  read.c  seek.c  size.c  tell.c  test.c  write.c
src/os/: get_hinstance.c
src/path/: extract_file_name.inc.c  extract_file_name_char.c  extract_file_name_wchar.c  find_ext.inc.c  find_ext_char.c  find_ext_wchar.c  find_last_path_sep.inc.c  find_last_path_sep_char.c  find_last_path_sep_wchar.c  get_module_name.c  get_temp_directory.c  is_same_ext.inc.c  is_same_ext_char.c  is_same_ext_wchar.c  test.c
src/source/: file.c  memory.c
src/time/: format.c  now.c  parse.c  test.c  time_util.c  time_util.h
testdata/: test-8khz-mono-16.aiff  test-8khz-mono-24.aiff  test-8khz-mono-32.aiff  test-8khz-mono-8-loop-id3.aiff  test-8khz-mono-8-loop-id3.w64  test-8khz-mono-8.aiff  test-8khz-mono-8.w64  test-8khz-stereo-8.aiff  test.flac  test.opus
